MS not showing fix

--- a/assets/sites/S24.css
+++ b/assets/sites/S24.css
@@ -52,6 +52,7 @@ body {
   container: pageCont / size;
   width: 100%;
   height: 100%;
+  position: relative;
 }
 #page {
   width: 100cqw;
@@ -473,6 +474,9 @@ h3.subline {
   overflow: hidden;
   clip-path: inset(0);
   z-index: -1;
+  &:has(iframe) {
+    display: block;
+  }
 
   & iframe {
     position: fixed;
@@ -486,10 +490,14 @@ h3.subline {
   overflow: hidden;
   clip-path: inset(0);
   z-index: -1;
+  &:has(iframe) {
+    display: block;
+  }
 
   & iframe {
     position: absolute;
     bottom: 0;
+    visibility: hidden;
   }
 }
 
