--- a/assets/sites/SN.css
+++ b/assets/sites/SN.css
@@ -33,6 +33,7 @@ body {
   container: pageCont / size;
   width: 100%;
   height: 100%;
+  position: relative;
 }
 #page {
   width: 100cqw;
@@ -257,6 +258,9 @@ article p {
   overflow: hidden;
   clip-path: inset(0);
   z-index: -1;
+  &:has(iframe) {
+    display: block;
+  }
 
   & iframe {
     position: fixed;
@@ -270,10 +274,14 @@ article p {
   overflow: hidden;
   clip-path: inset(0);
   z-index: -1;
+  &:has(iframe) {
+    display: block;
+  }
 
   & iframe {
     position: absolute;
     bottom: 0;
+    visibility: hidden;
   }
 }
 
